# AyED2026c1---Mendieta-Pedron

./: README.md
TrabajoPractico_1/proyecto_1/: main.py  main_ejemplo.py
TrabajoPractico_1/proyecto_2/: main.py
TrabajoPractico_1/proyecto_2/modules/: mazo.py
TrabajoPractico_1/proyecto_3/: main.py  proyecto_1.code-workspace
TrabajoPractico_1/proyecto_3/tests/: README.md
biblioteca_ayed_fiuner/: LICENCE  README.md  pyproject.toml
biblioteca_ayed_fiuner/ayedfiuner/: README.md
biblioteca_ayed_fiuner/ayedfiuner/algoritmos/: README.md  burbuja.py  quicksort.py  radix.py
biblioteca_ayed_fiuner/ayedfiuner/estructuras/: LDE.py  README.md  circulo.py  poligono.py  punto.py
biblioteca_ayed_fiuner/docs/: README.md
biblioteca_ayed_fiuner/tests/: README.md
biblioteca_ayed_fiuner/tests/tests_algoritmos/: test_burbuja.py
biblioteca_ayed_fiuner/tests/tests_estructuras/: test_LDE.py  test_circulo.py  test_poligono.py  test_punto.py
